--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+Copyright reserved
+-->
 <head>
 	<title>An example site</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
