Master class commit

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright reserved
 -->
 <head>
-	<title>An example site</title>
+	<title>Master class project</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
