adding changes after rebasing

--- a/simple.html
+++ b/simple.html
@@ -4,6 +4,7 @@ Copyright reserved
 -->
 <head>
 	<title>Big trouble project</title>
+	new stuff coming in
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
