--- a/simple.html
+++ b/simple.html
@@ -5,6 +5,7 @@ Copyright reserved
 <head>
 	<title>Big trouble project</title>
 	new stuff coming in
+	some updates from master branch
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
