adding changes from local

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,8 @@ Copyright reserved
 <head>
 	<title>Big trouble project</title>
 	new stuff coming in
-	some updates from master branch
+	These changes are from master branch in local and 
+	will be used for comparison
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
