done with simple.html

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright reserved
 -->
 <head>
-	<title>Big trouble project</title>
+	<title>Stash example/title>
 	new stuff coming in
 	These changes are from master branch in local and 
 	will be used for comparison
@@ -20,7 +20,7 @@ Copyright reserved
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content from stash
 		</p>
 	</main>
 	<footer class="container">
