done with simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,10 @@
+#important updates
 <!DOCTYPE html>
 <!--
 Copyright reserved
 -->
 <head>
-	<title>Stash example/title>
+	<title>Updating title for stash example</title>
 	new stuff coming in
 	These changes are from master branch in local and 
 	will be used for comparison
